# Noise_level

./: CMakeLists.txt  botoes.h  calibracao.h  config.h  http_client.c  main.c  temporizador.h  wifi.h
docs/: README.md
inc/: adc.h  botoes.h  config.h  joystick.h  lcd.h  leds.h  wifi.h
include/: config.h  http_client.h  joystick.h
src/: adc.c  botoes.c  calibracao.c  http_client.c  joystick.c  lcd.c  leds.c  main.c  temporizador.c  wifi.c
